[gd_scene load_steps=3 format=3 uid="uid://0f1ow37k7osj"]

[ext_resource type="Script" path="res://Scripts/level_select.gd" id="1_8c2nd"]
[ext_resource type="Texture2D" uid="uid://b48gme7aadfi1" path="res://Assets/Backgrounds/Runway 2023-11-22T01_50_30.531Z Image Variation-fotor-20231126193255.jpg" id="1_cnmd2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
script = ExtResource("1_8c2nd")
dir_path = "res://levels"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.4, 0.588235, 0.607843, 1)

[node name="Runway2023-11-22t015030_531zImageVariation-fotor-20231126193255" type="Sprite2D" parent="ColorRect"]
z_as_relative = false
position = Vector2(1196.5, 648)
scale = Vector2(1.16553, 0.84375)
texture = ExtResource("1_cnmd2")

[node name="ColorRect" type="ColorRect" parent="ColorRect/Runway2023-11-22t015030_531zImageVariation-fotor-20231126193255"]
custom_minimum_size = Vector2(200, 150)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1798.14
offset_top = -1933.09
offset_right = -352.14
offset_bottom = -1115.09
grow_horizontal = 2
grow_vertical = 0
color = Color(1, 1, 1, 0.498039)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -0.5
offset_right = 0.5
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 4
columns = 3

[node name="level_select_backbtn" type="Button" parent="." groups=["UI_Element"]]
layout_mode = 2
offset_left = 72.0
offset_top = 56.0
offset_right = 124.0
offset_bottom = 85.0
text = "Back"

[node name="settings" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.993
anchor_bottom = 1.0
offset_left = 1672.0
offset_top = 40.0
offset_right = -53.5599
offset_bottom = -979.0
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="Label" type="Label" parent="." groups=["UI_Element"]]
layout_direction = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -236.0
offset_top = 76.0
offset_right = 236.0
offset_bottom = 156.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0.0823529, 0.376471, 1)
theme_override_font_sizes/font_size = 60
text = "Select A Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level1" type="Button" parent="."]
layout_mode = 0
offset_left = 662.0
offset_top = 358.0
offset_right = 863.0
offset_bottom = 423.0
text = "Level 1
"

[node name="Level2" type="Button" parent="."]
layout_mode = 0
offset_left = 660.0
offset_top = 470.0
offset_right = 862.0
offset_bottom = 537.0
text = "Level 2"

[node name="Level3" type="Button" parent="."]
layout_mode = 0
offset_left = 667.0
offset_top = 583.0
offset_right = 870.0
offset_bottom = 652.0
text = "Level 3"

[node name="Level4" type="Button" parent="."]
layout_mode = 0
offset_left = 672.0
offset_top = 688.0
offset_right = 876.0
offset_bottom = 760.0
text = "Level 4"

[node name="Level5" type="Button" parent="."]
layout_mode = 0
offset_left = 671.0
offset_top = 812.0
offset_right = 875.0
offset_bottom = 884.0
text = "Level 5"

[node name="Level6" type="Button" parent="."]
layout_mode = 0
offset_left = 1137.0
offset_top = 367.0
offset_right = 1341.0
offset_bottom = 439.0
text = "Level 6
"

[node name="Level7" type="Button" parent="."]
layout_mode = 0
offset_left = 1142.0
offset_top = 466.0
offset_right = 1346.0
offset_bottom = 538.0
text = "Level 7
"

[node name="Level8" type="Button" parent="."]
layout_mode = 0
offset_left = 1145.0
offset_top = 578.0
offset_right = 1349.0
offset_bottom = 650.0
text = "Level 8
"

[node name="Level9" type="Button" parent="."]
layout_mode = 0
offset_left = 1151.0
offset_top = 687.0
offset_right = 1355.0
offset_bottom = 759.0
text = "Level 9
"

[node name="Level10" type="Button" parent="."]
layout_mode = 0
offset_left = 1154.0
offset_top = 808.0
offset_right = 1358.0
offset_bottom = 880.0
text = "Level 10
"

[connection signal="pressed" from="level_select_backbtn" to="." method="_on_level_select_backbtn_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="Level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Level6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="Level7" to="." method="_on_level_7_pressed"]
[connection signal="pressed" from="Level8" to="." method="_on_level_8_pressed"]
[connection signal="pressed" from="Level9" to="." method="_on_level_9_pressed"]
[connection signal="pressed" from="Level10" to="." method="_on_level_10_pressed"]
